k8s/blankapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blankapp-deployment
spec:
  selector:
    matchLabels:
      app: blankapp
  template:
    metadata:
      labels:
        app: blankapp
    spec:
      containers:
        - name: blankapp
          # 여러분의 image 주소를 입력해주세요.
          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_def5bdaac1c1
