k8s/nodejsapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejsapp-deployment
spec:
  selector:
    matchLabels:
      app: nodejsapp
  template:
    metadata:
      labels:
        app: nodejsapp
    spec:
      containers:
        - name: nodejsapp
          # 여러분의 image 주소를 입력해주세요.
          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_9fdf861b03e6

---

apiVersion: v1
kind: Service
metadata:
  name: nodejsapp-svc
spec:
  sessionAffinity: ClientIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: nodejsapp
